--- a/style.css
+++ b/style.css
@@ -3,13 +3,17 @@ body{
 }
 
 .home-page{
-    background-color: rgb(218, 238, 245);
+    background-color: rgb(168, 225, 236);
 }
 .facts-page{
-    background-color:rgb(224, 198, 249);
+    background-color:rgb(233, 119, 87);
 }
+.gallery-page{
+    background-color:rgb(250, 235, 139);
+}
+
 .navbar{
-    background-color: white;
+    background-color: rgb(255, 217, 47);
     display: flex;
     justify-content: space-evenly;
     padding-top: 2%;
@@ -45,10 +49,26 @@ body{
     border-radius: 10%;
     padding: 1%;
     margin: 1%;
-    background-color: rgb(170, 168, 168);
-    border-color: rgb(154, 152, 152);
+    background-color: rgb(255, 124, 248);
+    border-color: rgb(245, 67, 221);
     border: none;
     font-weight: bold;
     font-size:  x-large;
     height: 1%;
+}
+
+.navbar a:hover{
+    color:rgb(0, 255, 145);
+}
+
+#home-btn {
+    color:chocolate;
+}
+
+#facts-btn {
+    color:rgb(221, 81, 74);
+}
+
+#gallery-btn {
+    color:rgb(246, 244, 141);
 }
